[gd_scene load_steps=6 format=3 uid="uid://b3wtor7rbs2ni"]

[ext_resource type="Script" path="res://environment/script/DataCollectionTower.gd" id="1_mxrl2"]
[ext_resource type="Texture2D" uid="uid://b51ay7wnxcb4i" path="res://resource/v1.1 dungeon crawler 16X16 pixel pack/enemies/flying creature/fly_anim_f0.png" id="2_sf2om"]
[ext_resource type="Script" path="res://environment/script/InteractArea.gd" id="3_70txc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5mnqc"]
radius = 34.2345

[sub_resource type="CircleShape2D" id="CircleShape2D_xnuey"]
radius = 221.02

[node name="DataCollectionTower" type="Node2D" groups=["environment"]]
script = ExtResource("1_mxrl2")

[node name="ItemSprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_sf2om")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -49.0
offset_top = -38.0
offset_right = 52.0
offset_bottom = -15.0
text = "Press F to Fix"

[node name="InteractArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 32
collision_mask = 32
script = ExtResource("3_70txc")

[node name="InteractionRange" type="CollisionShape2D" parent="InteractArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_5mnqc")

[node name="TimerLabel" type="RichTextLabel" parent="."]
offset_left = -137.0
offset_top = -60.0
offset_right = 151.0
offset_bottom = -37.0
autowrap_mode = 2

[node name="Border" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5
script = ExtResource("3_70txc")

[node name="Sprite2D" type="Sprite2D" parent="Border"]

[node name="Border" type="CollisionShape2D" parent="Border"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_xnuey")
disabled = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Border" to="." method="_on_border_area_entered"]
[connection signal="area_exited" from="Border" to="." method="_on_border_area_exited"]
